# idioms-plugins

./: README.md  cabal.project  idioms-plugin.cabal
example/: Example.hs
src/: IdiomsPlugin.hs
