cabal-version: 2.2
name:          idioms-plugin
version:       0

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:
    IdiomsPlugin
  build-depends:
    , base ^>=4.12
    , ghc ^>=8.6
    , syb

test-suite example
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   example
  main-is:          Example.hs
  
  build-depends:
    , base
    , idioms-plugin
